[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "storch"
license = {file = "LICENSE"}
description = "PyTorch utilities for STomoya."
authors = [
    {name = "Tomoya Sawada", email = "stomoya0110@gmail.com"}
]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    'tqdm',
    'numpy',
    'opencv-python',
    'pillow',
    'matplotlib',
    'scikit-learn',
    'scikit-image',
    'hydra-core',
    'tensorboard',
    'stutil@git+https://github.com/STomoya/stutil@v0.0.6'
]
dynamic = ["version"]

[project.urls]
source = "https://github.com/STomoya/storch"

[tool.setuptools.packages.find]
exclude = ["build", "tests"]

[tool.setuptools.dynamic]
version = {attr = "storch.version.__version__"}
